--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,47 @@
+ignore/
+
+# emacs
+# -*- mode: gitignore; -*-
 *~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+eshell/history
+eshell/lastdir
+
+# elpa packages
+elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+auto/
+
+# cask packages
+.cask/
+
+# leiningen
 pom.xml
+pom.xml.asc
 *jar
-/lib/
-/classes/
-/target/
+classes/
+target/
+checkouts/
 .lein-deps-sum
-war/
+.lein-repl-history
+.lein-plugins/
+.lein-failures
